tests/tooling/fixtures/native/recovery/negative/negative_objc_literal_aliases_global_divide_by_zero.objc3
// Expected diagnostic code(s): O3S210.
module NegativeObjcLiteralAliasesGlobalDivideByZero;

let value = NULL / 0;

fn main() -> i32 {
  return value;
}
